# vocotrack

./: README.md  pyproject.toml
backend/: pyproject.toml
data/raw/: .gitattributes  ASMDD.csv  test.feather.lz4  test.joblib  train.feather.lz4  train.joblib  words_id.json
notebooks/: baseline_transformer.py  eda.ipynb  open_smile_transformer.py  preprocessing_data.ipynb  training.ipynb  utils.py
notebooks/classic_ml/: all_stats_transformer.py  baseline_transformer.py  eda.ipynb  open_smile_transformer.py  optuna.sqlite3  preprocessing_data.ipynb  stat_feat_transformer.py  training.ipynb  utils.py
notebooks/classic_ml/opensmile/: healthy_wav_files.txt  mfcc-extraction-all-samples.ipynb  mfcc_features_patient.csv  patient_wav_files.txt
notebooks/deep_learning/: data_module.py  dataset.py  preprocessing.ipynb  rvector_module.py  training.ipynb  utils.py
notebooks/opensmile/: train_test_mfcc.ipynb
vocotrack/: __init__.py  classifier.py  config.py  resnet.py  rvector.py
