[project]
name = "vocotrack"
version = "0.1.0"
description = "This project aims to support children with speech development difficulties by providing an automated system to evaluate their progress in pronouncing specific sounds over time. The system focuses on tracking the improvement of pronunciation quality through repeated recordings and objective evaluation."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.2.4",
]

[tool.uv.workspace]
members = ["backend"]
